<resources>
    <string name="app_name">心康医生版</string>
    <string name="action_bar_main">心脏康复管理中心(医生版)</string>
    <string name="title_activity_login">登录</string>
    <string name="main_call_info">对话信息</string>
    <string name="main_dr_management">医生管理</string>
    <string name="main_pt_management">患者管理</string>
    <string name="main_payment_management">套餐管理</string>
    <string name="main_activity_management">活动管理</string>
    <string name="main_profile">我的</string>
    <string name="main_demo_disable">Demo版不提供此功能</string>

    <!-- Strings related to login -->
    <string name="prompt_id">医生编码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">医生编码无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Message activity -->
    <string name="message_title">信息列表</string>

    <!-- Doctor Management Activity -->
    <string name="dr_mgmt_title">医生管理</string>

    <!-- Add Doctor Activity -->
    <string name="add_dr_title">添加医生</string>
    <string name="add_dr_add_id">输入医生编号</string>
    <string name="add_dr_init_password">添加初始密码</string>
    <string name="add_dr_ok">确定</string>
    <string name="add_dr_cancel">取消</string>

    <!-- Patient Management Activity -->
    <string name="pt_mgmt_title">患者管理</string>

    <!-- Add Patient Activity -->
    <string name="add_pt_title">添加患者</string>
    <string name="add_pt_add_pt_id">输入患者编号</string>
    <string name="add_pt_add_phone">患者电话号码</string>
    <string name="add_pt_add_dr_id">主治医师编号</string>
    <string name="add_pt_ok">确定</string>
    <string name="add_pt_cancel">取消</string>

    <!-- Patient Details Activity -->
    <string name="pt_details_title">患者详情</string>
    <string name="pt_details_base">基本情况</string>
    <string name="pt_details_purchase">订购情况</string>
    <string name="pt_details_product1">关爱套餐1</string>
    <string name="pt_details_activity">参加活动</string>
    <string name="pt_details_plan">心血管计划</string>
    <string name="pt_details_pt_name">患者姓名：</string>
    <string name="pt_details_call">发起对话</string>

    <!-- Payment Management Activity -->
    <string name="payment_mgmt_title">套餐管理</string>
    <string name="payment_mgmt_pay">套餐</string>

    <!-- Payment details Activity -->
    <string name="payment_details_title">套餐详情</string>
    <string name="payment_details_edit">编辑</string>
    <string name="payment_details_del">删除</string>

    <!-- Add Payment Activity -->
    <string name="add_payment_title">添加套餐</string>
    <string name="add_payment_name">套餐名称</string>
    <string name="add_payment_details">套餐说明</string>
    <string name="add_payment_price">收费标准</string>
    <string name="add_payment_ok">确定</string>
    <string name="add_payment_cancel">取消</string>

    <!-- Activity Management Activity -->
    <string name="act_mgmt_title">活动管理</string>
    <string name="act_mgmt_activity">活动</string>

    <!-- Activity Details Activity -->
    <string name="act_details_title">活动详情</string>
    <string name="act_details_edit">编辑</string>
    <string name="act_details_del">删除</string>

    <!-- Add Activity Activity -->
    <string name="add_act_title">添加活动</string>
    <string name="add_act_name">活动名称</string>
    <string name="add_act_details">活动说明</string>
    <string name="add_act_ok">确定</string>
    <string name="add_act_cancel">取消</string>

    <!-- Profile Activity -->
    <string name="profile_title">我的</string>
    <string name="profile_avatar">头像</string>
    <string name="profile_dr_id">医生编码</string>
    <string name="profile_email">邮箱</string>
    <string name="profile_modify_password">更改密码</string>
    <string name="profile_upgrade">版本更新</string>

    <!-- Menu -->
    <string name="menu_add">添加</string>
    <string name="menu_del">删除</string>
</resources>
