<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.AddActActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20px"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_add_act_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50px"
        android:ems="10"
        android:hint="@string/add_act_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edt_add_act_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50px"
        android:ems="10"
        android:hint="@string/add_act_details"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_act_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10px"
            android:layout_weight="1"
            android:onClick="onBtnClick"
            android:text="@string/add_act_ok" />

        <Button
            android:id="@+id/btn_add_act_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_weight="1"
            android:onClick="onBtnClick"
            android:text="@string/add_act_cancel" />
    </LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>