<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddDrActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_add_dr_add_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/add_dr_add_id"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_add_dr_add_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/add_dr_init_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_dr_ok"
                style="@style/AvailableBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10px"
                android:layout_weight="1"
                android:onClick="onBtnClick"
                android:text="@string/add_dr_ok" />

            <Button
                android:id="@+id/btn_add_dr_cancel"
                style="@style/AvailableBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_weight="1"
                android:onClick="onBtnClick"
                android:text="@string/add_dr_cancel" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>