<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PtDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_pt_details_pt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="28dip" />

            <Button
                android:id="@+id/btn_pt_details_call"
                style="@style/AvailableBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnClick"
                android:text="@string/pt_details_call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_pt_details_base_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/pt_details_base"
                android:textSize="20dip" />

            <ImageButton
                android:id="@+id/imgbtn_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/item_tail" />

        </LinearLayout>

        <TextView
            android:id="@+id/textview_pt_details_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bt_title_green"
            android:text="@string/pt_details_purchase"
            android:textColor="@color/txt_white"
            android:textSize="20dip" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_pt_details_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/textview_pt_detail_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bt_title_green"
            android:text="@string/pt_details_activity"
            android:textColor="@color/txt_white"
            android:textSize="20dip" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_pt_details_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>