<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30px"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profile_avatar"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/profile_avatar"
                android:textSize="20dip" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/item_tail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profile_dr_id"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/profile_dr_id"
                android:textSize="20dip" />

            <TextView
                android:id="@+id/textview_profile_dr_id_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D0001"
                android:textSize="18dip" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/item_tail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/profile_email"
                android:textSize="20dip" />

            <TextView
                android:id="@+id/textview_profile_email_content"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="zhongyidaxue@163.com"
                android:textSize="18dip" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/item_tail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profile_modify_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_modify_password"
                android:textSize="20dip" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/item_tail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profile_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/profile_upgrade"
                android:textSize="20dip" />

            <TextView
                android:id="@+id/textview_profile_upgrade_content"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="v0.1.0"
                android:textSize="18dip" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/item_tail" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>